--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -22,12 +22,12 @@ header {
     color: #ffffff;
 }
 
-h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-h1 span {
+header h1 span {
     color: #d9dcd6;
 }
 /* ------------------------------------------------------------ */
@@ -66,7 +66,7 @@ nav a {
 /* ------------------------------------------------------------ */
 
 
-/* ------------------Content----------------------------------- */
+/* ------------------Main-------------------------------------- */
 section {
     width: 75%;
     display: inline-block;
