--- a/Develop/assets/css/style.css
+++ b/Develop/assets/css/style.css
@@ -67,13 +67,13 @@ nav a {
 
 
 /* ------------------Main-------------------------------------- */
-section {
+main {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
 }
 
-section div {
+main section {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -82,11 +82,11 @@ section div {
     color: #ffffff;
 }
 
-section img {
+main img {
     max-height: 200px;
 }
 
-section h2 {
+main h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
